infrastructure/kyverno-policies/verify-git-repositories.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-git-repositories
spec:  
  # This provides users a working example of how an admin
  # would be able to enforce git repository sources across
  # all tenants.
  validationFailureAction: Enforce # Change to 'Enforce' once the specific org url is set.
  rules:
    - name: github-repositories-only
      exclude:
        resources:
          namespaces:
            - flux-system
      match:
        any:
        - resources:
            kinds:
              - GitRepository
      validate:
        message: ".spec.url must be from a repository within the organisation holdbar-com"
        anyPattern:
        - spec:
            url: "https://github.com/holdbar-com/?*" # repositories in holdbar-com via https
        - spec:
            url: "ssh://git@github.com:holdbar-com/?*" # repositories in holdbar-com via ssh
